# Ironclad

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  init_db.py  push_commits.sh  pyproject.toml  requirements.txt  setup.py  sherlock_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: style.css
config/: settings.py
docs/: ARCHITECTURE.md
src/: config.py  main.py
tests/: test_agent.py  test_face.py  test_osint.py
utils/: __init__.py  face_utils.py  osint_utils.py
